--- a/config.yaml
+++ b/config.yaml
@@ -1,253 +1,16 @@
 %YAML 1.1
 ---
-#########################
-## SHOULD BE USING MIG ##
-#########################
-should-be-using-mig-della-gpu:
-  cluster: della
-  partition: gpu
-  excluded_users:
-    - aturing
-    - jzp
-    - einstein
-
-
-############################
-## TOO MANY CORES PER GPU ##
-############################
-too-many-cores-per-gpu:
-  cluster: della
-  cluster_name: "Della (PLI)"
-  partitions:
-    - pli
-    - pli-c
-    - pli-p
-  excluded_users:
-    - aturing
-    - einstein
-  cores_per_gpu_target: 12
-  cores_per_gpu_limit: 24
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - kl5675@princeton.edu
-
-
-############################
-## LOW CPU/GPU EFFICIENCY ##
-############################
-low-xpu-efficiency-della-cpu:
-  cluster: della
-  cluster_name: "Della (cpu)"
-  partitions:
-    - cpu
-  xpu: cpu
-  eff_thres_pct: 60
-  eff_target_pct: 90 
-  proportion_thres_pct: 2
-  num_top_users: 15
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - msbc@princeton.edu
-
-low-xpu-efficiency-della-gpu:
-  cluster: della
-  cluster_name: "Della (gpu)"
-  partitions:
-    - gpu
-  xpu: gpu
-  eff_thres_pct: 15
-  eff_target_pct: 50 
-  proportion_thres_pct: 2
-  num_top_users: 15
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - msbc@princeton.edu
-
-low-xpu-efficiency-della-pli-c:
-  cluster: della
-  cluster_name: "Della (pli-c)"
-  partitions:
-    - pli-c
-  xpu: gpu
-  eff_thres_pct: 40
-  eff_target_pct: 75
-  proportion_thres_pct: 2
-  num_top_users: 5
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - kl5675@princeton.edu
-    - msbc@princeton.edu
-
-low-xpu-efficiency-della-pli:
-  cluster: della
-  cluster_name: "Della (pli)"
-  partitions:
-    - pli
-  xpu: gpu
-  eff_thres_pct: 40
-  eff_target_pct: 75
-  proportion_thres_pct: 2
-  num_top_users: 5
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - kl5675@princeton.edu
-    - msbc@princeton.edu
-
-low-xpu-efficiency-della-physics:
-  cluster: della
-  cluster_name: "Della (physics)"
-  partitions:
-    - physics
-  xpu: cpu
-  eff_thres_pct: 60
-  eff_target_pct: 90
-  proportion_thres_pct: 2
-  num_top_users: 3
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - msbc@princeton.edu
-
-low-xpu-efficiency-stellar-intel:
-  cluster: stellar
-  cluster_name: "Stellar (Intel)"
-  partitions:
-    - all
-    - pppl
-    - pu
-    - serial
-  xpu: cpu
-  eff_thres_pct: 60
-  eff_target_pct: 90
-  proportion_thres_pct: 2
-  num_top_users: 15
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - msbc@princeton.edu
-
-low-xpu-efficiency-tiger:
-  cluster: tiger
-  cluster_name: "Tiger"
-  partitions:
-    - cpu
-    - ext
-    - serial
-  xpu: cpu
-  eff_thres_pct: 60
-  eff_target_pct: 90
-  proportion_thres_pct: 2
-  num_top_users: 15
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-    - msbc@princeton.edu
-
-
-#######################
-## EXCESS CPU MEMORY ##
-#######################
-excess-cpu-memory-della-cpu:
-  tb_hours_per_day: 10
-  ratio_threshold: 0.35
-  mean_ratio_threshold: 0.35
-  median_ratio_threshold: 0.35
-  num_top_users: 10
+low-gpu-utilization-mc:
+  low_gpu_util: 15
+  first_warning_minutes: 60
+  cancel_minutes: 120
+  sampling_period_minutes: 15
+  max_interactive_hours: 8
   clusters:
-    - della
-  partition:
-    - cpu
-  combine_partitions: False
-  cores_per_node: 28
+    - mc
+  partitions:
+    - mc
   excluded_users:
-    - aturing
-    - einstein
-    - vonholdt
+    - ubuntu
   admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-    - halverson@princeton.edu
-
-excess-cpu-memory-della-datascience:
-  tb_hours_per_day: 10000
-  ratio_threshold: 0.25
-  mean_ratio_threshold: 0.25
-  median_ratio_threshold: 0.25
-  num_top_users: 10
-  clusters:
-    - della
-  partition:
-    - datasci
-  combine_partitions: False
-  cores_per_node: 10000
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-
-excess-cpu-memory-stellar:
-  tb_hours_per_day: 10000
-  ratio_threshold: 0.25
-  mean_ratio_threshold: 0.25
-  median_ratio_threshold: 0.25
-  num_top_users: 5
-  clusters:
-    - stellar
-  partition:
-    - all
-    - pppl
-    - pu
-    - serial
-  combine_partitions: False
-  cores_per_node: 76.8
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
-
-excess-cpu-memory-tiger:
-  tb_hours_per_day: 10000
-  ratio_threshold: 0.25
-  mean_ratio_threshold: 0.25
-  median_ratio_threshold: 0.25
-  num_top_users: 5
-  clusters:
-    - tiger
-  partition:
-    - cpu
-    - ext
-    - serial
-  combine_partitions: True
-  cores_per_node: 32
-  excluded_users:
-    - aturing
-    - einstein
-  admin_emails:
-    - alerts-jobs-aaaalegbihhpknikkw2fkdx6gi@princetonrc.slack.com
+    - amandio.faustino@kaust.edu.sa
